force-app/main/default/objects/Drawing__c/Drawing__c.object-meta.xml
<CustomObject>
    <description>This object is the place to store all design drawings and pack specs.</description>
    <label>Drawing</label>
    <nameField>
        <label>Drawing Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drawings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>