force-app/main/default/objects/Drawing__c/fields/Account_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Formula__c</fullName>
    <formula>Account__r.Owner.FirstName + &apos; &apos; + Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>