force-app/main/default/objects/Drawing__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo determina el estado, activo o inactivo, del plano</description>
    <inlineHelpText>Este campo determina el estado, activo o inactivo, del plano</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>