force-app/main/default/objects/Drawing__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Colour</label>
    <length>50</length>
    <type>Text</type>
</CustomField>