force-app/main/default/objects/Drawing__c/fields/Design_Brief__c.field-meta.xml
<CustomField>
    <fullName>Design_Brief__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Brief</label>
    <referenceTo>Design_Brief__c</referenceTo>
    <relationshipLabel>Drawings (Design Brief)</relationshipLabel>
    <relationshipName>Drawings</relationshipName>
    <type>Lookup</type>
</CustomField>