force-app/main/default/objects/Drawing__c/fields/Design_Details__c.field-meta.xml
<CustomField>
    <fullName>Design_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Details</label>
    <referenceTo>Design_Brief__c</referenceTo>
    <relationshipName>Containers</relationshipName>
    <type>Lookup</type>
</CustomField>