force-app/main/default/objects/Drawing__c/fields/Drawing_Type__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Type__c</fullName>
    <label>Drawing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Pack Spec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>