force-app/main/default/objects/Drawing__c/fields/Files_last_updated__c.field-meta.xml
<CustomField>
    <fullName>Files_last_updated__c</fullName>
    <label>Files last updated</label>
    <type>DateTime</type>
</CustomField>