force-app/main/default/objects/Drawing__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>