force-app/main/default/objects/Drawing__c/fields/ImportFlag__c.field-meta.xml
<CustomField>
    <fullName>ImportFlag__c</fullName>
    <description>System field used during data import</description>
    <inlineHelpText>System field used during data import</inlineHelpText>
    <label>Import Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>