force-app/main/default/objects/Drawing__c/fields/Mould_Number__c.field-meta.xml
<CustomField>
    <fullName>Mould_Number__c</fullName>
    <formula>SO_003_MPA_form_Rev_18_Lookup__r.Mould_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mould Number</label>
    <type>Text</type>
</CustomField>