force-app/main/default/objects/Drawing__c/fields/MPA_Record_Attached__c.field-meta.xml
<CustomField>
    <fullName>MPA_Record_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MPA Record Attached</label>
    <type>Checkbox</type>
</CustomField>