force-app/main/default/objects/Drawing__c/fields/MPA_Spain__c.field-meta.xml
<CustomField>
    <fullName>MPA_Spain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Spanish MPA Object</description>
    <label>MPA (Fifty)</label>
    <referenceTo>MPA_Fifty__c</referenceTo>
    <relationshipLabel>Drawings</relationshipLabel>
    <relationshipName>Drawings</relationshipName>
    <type>Lookup</type>
</CustomField>