force-app/main/default/objects/Drawing__c/fields/Pallet_Height__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Height__c</fullName>
    <label>Pallet Height</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>