force-app/main/default/objects/Drawing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product look-up Fifty</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Drawings</relationshipLabel>
    <relationshipName>Drawings</relationshipName>
    <type>Lookup</type>
</CustomField>