force-app/main/default/objects/Drawing__c/fields/SAP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Number__c</fullName>
    <formula>Account__r.SAP_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Account Number</label>
    <type>Text</type>
</CustomField>