force-app/main/default/objects/Drawing__c/fields/SO_003_MPA_form_Rev_18_Lookup__c.field-meta.xml
<CustomField>
    <fullName>SO_003_MPA_form_Rev_18_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(SO-003) MPA form Rev 18 Lookup</label>
    <referenceTo>MPA__c</referenceTo>
    <relationshipLabel>Drawings</relationshipLabel>
    <relationshipName>Drawings</relationshipName>
    <type>Lookup</type>
</CustomField>