force-app/main/default/objects/Drawing__c/fields/Spec_No__c.field-meta.xml
<CustomField>
    <fullName>Spec_No__c</fullName>
    <label>Spec No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>