force-app/main/default/objects/Drawing__c/fields/Trial_Data_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Trial_Data_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Trial Data object</description>
    <label>Trial Data Lookup</label>
    <referenceTo>Trial_Data__c</referenceTo>
    <relationshipLabel>Drawings</relationshipLabel>
    <relationshipName>Drawings</relationshipName>
    <type>Lookup</type>
</CustomField>