force-app/main/default/objects/Drawing__c/fields/Trial_Data_Record_Attached__c.field-meta.xml
<CustomField>
    <fullName>Trial_Data_Record_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To restrict update of Trail data field</description>
    <label>Trial Data Record Attached</label>
    <type>Checkbox</type>
</CustomField>