force-app/main/default/objects/Drawing__c/recordTypes/Drawings_Encirc.recordType-meta.xml
<RecordType>
    <fullName>Drawings_Encirc</fullName>
    <active>true</active>
    <label>Drawings (Encirc)</label>
</RecordType>