force-app/main/default/objects/Drawing__c/recordTypes/Drawings_Fifty.recordType-meta.xml
<RecordType>
    <fullName>Drawings_Fifty</fullName>
    <active>true</active>
    <label>Drawings (Fifty)</label>
</RecordType>