force-app/main/default/objects/Drawing__c/listViews/All_Containers.listView-meta.xml
<ListView>
    <fullName>All_Containers</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Drawing_Type__c</columns>
    <columns>Finish__c</columns>
    <columns>Colour__c</columns>
    <columns>Spec_No__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Design_Brief__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Drawing_Type__c</field>
        <operation>equals</operation>
        <value>Container</value>
    </filters>
    <label>All Containers</label>
</ListView>