force-app/main/default/objects/Drawing__c/listViews/All_Drawings.listView-meta.xml
<ListView>
    <fullName>All_Drawings</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Account__c</columns>
    <columns>Drawing_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Files_uploaded__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Drawings</label>
</ListView>