force-app/main/default/objects/Drawing__c/listViews/All_Pack_Specs.listView-meta.xml
<ListView>
    <fullName>All_Pack_Specs</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Colour__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Files_uploaded__c</columns>
    <columns>Account__c</columns>
    <columns>Drawing_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Drawing_Type__c</field>
        <operation>equals</operation>
        <value>Pack Spec</value>
    </filters>
    <label>All Pack Specs</label>
</ListView>