force-app/main/default/objects/Drawing__c/listViews/FIFTY_DRAWING_WITH_PRODUCT.listView-meta.xml
<ListView>
    <fullName>FIFTY_DRAWING_WITH_PRODUCT</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bottle__c</columns>
    <columns>Colour__c</columns>
    <columns>Description__c</columns>
    <columns>MPA_Spain__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>FIFTY DRAWING WITH PRODUCT</label>
</ListView>